add observability and metric flows.  re-organize structure

--- a/agents/tasks/analysis-implementation.yaml
+++ b/agents/tasks/analysis-implementation.yaml
@@ -1,12 +1,15 @@
-name: "Analysis: Implementation Plan"
+name: 'Analysis: Implementation Plan'
 objective: Translate insights into measurable instrumentation and reporting actions.
 inputs:
-  - artifacts/analysis/market-business-flow.md
-  - agents/tools/analytics-workbench.yaml
+- agent-artifacts/analysis/market-business-flow.md
+- agent-data-sources/analytics-platform.md
 steps:
-  - Define metrics to capture and record them in the instrumentation plan section of artifacts/analysis/market-business-flow.md.
-  - Specify dashboards or reports to build, with owners and cadence.
-  - Log next actions in agents/logs/market-business-flow.md.
+- Define metrics to capture and record them in the instrumentation plan section of
+  agent-artifacts/analysis/market-business-flow.md.
+- Specify dashboards or reports to build, with owners and cadence.
+- Log next actions in changelog/market-business-flow.md.
+- Update agent-artifacts/observability/plan.md with key business metrics and owners.
 evidence:
-  - Instrumentation plan table completed in artifacts/analysis/market-business-flow.md.
-  - Updated entry in agents/logs/market-business-flow.md.
+- Instrumentation plan table completed in agent-artifacts/analysis/market-business-flow.md.
+- Updated entry in changelog/market-business-flow.md.
+- Observability plan lists business metrics with owners and cadence.
