--- a/agents/tasks/analysis-money-flow.yaml
+++ b/agents/tasks/analysis-money-flow.yaml
@@ -1,12 +1,15 @@
-name: "Analysis: Money Flow"
-objective: Describe how cash moves from the broader economy through the market and into this company, highlighting monetisation levers.
+name: 'Analysis: Money Flow'
+objective: Describe how cash moves from the broader economy through the market and
+  into this company, highlighting monetisation levers.
 inputs:
-  - artifacts/analysis/market-business-flow.md
-  - agents/tools/revenue-ledger.yaml
+- agent-artifacts/analysis/market-business-flow.md
+- agent-data-sources/revenue-ledger.md
 steps:
-  - Draft the money flow diagram (economy → market → company revenue) inside artifacts/analysis/market-business-flow.md.
-  - List revenue sources, cost centres, and pricing strategies with data citations.
-  - Capture validation experiments and metrics in agents/logs/market-business-flow.md.
+- Update the Mermaid money flow diagram in agent-artifacts/analysis/market-business-flow.md
+  using C4 System Context (C1) and Container (C2) views.
+- Ensure system entities and containers are labeled so downstream teams can see how
+  revenue moves through the company.
+- Capture validation experiments and metrics in changelog/market-business-flow.md.
 evidence:
-  - Money flow diagram and business analysis sections updated in artifacts/analysis/market-business-flow.md.
-  - Entry added to agents/logs/market-business-flow.md.
+- Money flow diagram and business analysis sections updated in agent-artifacts/analysis/market-business-flow.md.
+- Entry added to changelog/market-business-flow.md.
