--- a/agents/tasks/product-data-flow.yaml
+++ b/agents/tasks/product-data-flow.yaml
@@ -1,12 +1,18 @@
-name: "Product: Data Flow Diagram"
-objective: Define how data moves through internal products and services so the company can capture the money flow described by the analysis.
+name: 'Product: Data Flow Diagram'
+objective: Define how data moves through internal products and services so the company
+  can capture the money flow described by the analysis.
 inputs:
-  - artifacts/product/prd-data-flow.md
-  - agents/tools/api-playbook.yaml
+- agent-artifacts/product/prd-data-flow.md
+- agent-data-sources/api-playbook.md
 steps:
-  - Draw or describe the data flow diagram inside artifacts/product/prd-data-flow.md.
-  - Enumerate company products (services/APIs), payload schemas, and storage requirements that move data between teams and systems.
-  - Note compliance or retention considerations in the PRD and log.
+- Draw a C3 (component-level) Mermaid diagram in agent-artifacts/product/prd-data-flow.md
+  showing applications/services within their containers and how data moves between
+  them.
+- Enumerate company products (services/APIs), payload schemas, and storage requirements
+  that move data between teams and systems.
+- Update agent-artifacts/architecture/system-map.md with new product/service relationships.
 evidence:
-  - Data Flow Diagram section of artifacts/product/prd-data-flow.md updated.
-  - Log entry in agents/logs/prd-data-flow.md.
+- Data Flow Diagram section of agent-artifacts/product/prd-data-flow.md updated with
+  the Mermaid C3 diagram.
+- Log entry in changelog/prd-data-flow.md.
+- Architecture system map updated in agent-artifacts/architecture/system-map.md.
