--- a/agents/tasks/ux-implement-frontend.yaml
+++ b/agents/tasks/ux-implement-frontend.yaml
@@ -1,12 +1,17 @@
-name: "Experience: Implement Frontend"
-objective: Build or prototype the interface outlined in the Experience Blueprint so users can navigate to the money/data-driven capabilities.
+name: 'Experience: Implement Frontend'
+objective: Build or prototype the interface outlined in the Experience Blueprint so
+  users can navigate to the money/data-driven capabilities.
 inputs:
-  - artifacts/ux/user-flow-map.md
-  - products/web-app/
+- agent-artifacts/ux/user-flow-map.md
+- products/web-app/
 steps:
-  - Create or update routes/components in products/web-app/ that correspond to the entry points and backend capabilities documented in the PRD.
-  - Apply design system primitives and ensure loading, empty, and error states exist.
-  - Record links to Storybook or preview builds (or PRs) in agents/logs/user-flow-map.md.
+- Create or update routes/components in products/web-app/ that correspond to the entry
+  points and backend capabilities documented in the PRD.
+- Apply design system primitives and ensure loading, empty, and error states exist.
+- Record links to Storybook or preview builds (or PRs) in changelog/user-flow-map.md.
+- Update agent-artifacts/observability/plan.md with product signal coverage.
+- Record front-end observability updates in changelog/observability.md.
 evidence:
-  - Components and routes in products/web-app/ matching the experience blueprint.
-  - Implementation notes recorded in agents/logs/user-flow-map.md.
+- Components and routes in products/web-app/ matching the experience blueprint.
+- Implementation notes recorded in changelog/user-flow-map.md.
+- Observability plan and log reflect front-end implementation coverage.
