--- a/agents/tasks/ux-user-flows.yaml
+++ b/agents/tasks/ux-user-flows.yaml
@@ -1,12 +1,15 @@
-name: "Experience: User Flows"
-objective: Map the primary user journeys showing how people reach the money-generating capabilities described in the PRD.
+name: 'Experience: User Flows'
+objective: Map the primary user journeys showing how people reach the money-generating
+  capabilities described in the PRD.
 inputs:
-  - artifacts/product/prd-data-flow.md
-  - agents/tools/design-system.yaml
+- agent-artifacts/product/prd-data-flow.md
+- agent-data-sources/design-system.md
 steps:
-  - Update the Entry Points table in artifacts/ux/user-flow-map.md with URLs and the corresponding backend capabilities from the PRD.
-  - Draw key user flows (success and recovery) in the flowchart section.
-  - Add notes to agents/logs/user-flow-map.md summarising the flows and dependencies.
+- Update the Entry Points table in agent-artifacts/ux/user-flow-map.md with URLs and
+  the corresponding backend capabilities from the PRD.
+- Draw key user flows (success and recovery) as Mermaid diagrams (C3 component view)
+  in agent-artifacts/ux/user-flow-map.md.
+- Add notes to changelog/user-flow-map.md summarising the flows and dependencies.
 evidence:
-  - Entry points and flowchart sections in artifacts/ux/user-flow-map.md completed.
-  - Log entry in agents/logs/user-flow-map.md.
+- Entry points and Mermaid flowcharts in agent-artifacts/ux/user-flow-map.md completed.
+- Log entry in changelog/user-flow-map.md.
